# desiutil

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  README.rst  ez_setup.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: cron-warnings.yml  python-package.yml
doc/: api.rst  changes.rst  conf.py  desiInstall.rst  helpers.rst  index.rst  rtd-requirements.txt
doc/_templates/: layout.html
doc/nb/: SVFields.ipynb  SkyMapExamples.ipynb  TestPlotIERS.ipynb  test_plotsky.ipynb
etc/: dependencies.cfg  desiUtil.module  desiutil.module  travis_env_common.sh  travis_env_linux.sh
etc/doc/: README.rst  conf.py
etc/doc/doxygen/: Doxyfile  Makefile
etc/doc/sphinx/: conf.py
py/desiUtil/: __init__.py
py/desiUtil/install/: __init__.py  dependencies.py  generate_doc.py  get_product_version.py  get_svn_devstr.py  git_version.py  known_products.py  main.py  most_recent_tag.py  set_build_type.py  version.py
py/desiUtil/sphinx/: __init__.py
py/desiutil/: __init__.py  _version.py  annotate.py  api.py  basemap.py  bitmask.py  brick.py  census.py  depend.py  dust.py  funcfits.py  git.py  healpix.py  iers.py  install.py  io.py  log.py  maskbits.py  modules.py  names.py  plots.py  redirect.py  setup.py  sfdmap.py  sklearn.py  stats.py  svn.py  timer.py
py/desiutil/data/: DES_footprint.txt  census.yaml  finals2000A.all  iers_frozen.ecsv
py/desiutil/git/: __init__.py  last_tag.py  version.py
py/desiutil/install/: __init__.py  dependencies.py  desiInstall_options.py  desi_install.py  generate_doc.py  get_product_version.py  get_svn_devstr.py  git_version.py  known_products.py  main.py  most_recent_git_tag.py  most_recent_tag.py  set_build_type.py  svn_version.py  version.py
py/desiutil/modules/: __init__.py  init_modules.py
py/desiutil/setup/: __init__.py  desi_module.py  desi_test.py  desi_version.py  find_version_directory.py  get_version.py  update_version.py
py/desiutil/sphinx/: __init__.py
py/desiutil/svn/: __init__.py  last_revision.py  last_tag.py  version.py
py/desiutil/test/: __init__.py  desiutil_test_suite.py  make_testmaps.py  setup_package.py  test_annotate.py  test_api.py  test_bitmask.py  test_brick.py  test_census.py  test_depend.py  test_dust.py  test_funcfits.py  test_git.py  test_healpix.py  test_iers.py  test_install.py  test_io.py  test_log.py  test_maskbits.py  test_modules.py  test_names.py  test_plots.py  test_redirect.py  test_setup.py  test_sfdmap.py  test_sklearn.py  test_stats.py  test_svn.py  test_timer.py  test_top_level.py
py/desiutil/test/t/: desiInstall_configuration.ini  generic_dependencies.txt  nersc_dependencies.txt  test.module
